--- a/templates/base.html
+++ b/templates/base.html
@@ -24,12 +24,7 @@
 
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav">
-          <li class="nav-item active">
-            <a class="nav-link" href="{{ url_for('index') }}">Splits</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="{{url_for('track')}}">Track Splits</a>
-          </li>
+          {% block nav %} {% endblock %}
         </ul>
       </div>
     </nav>
