--- a/templates/index.html
+++ b/templates/index.html
@@ -26,6 +26,11 @@
     <button type="submit" value="Submit">Submit</button>
   </form>
 
+<!--   {% block app_content %}
+    <div id="react-root"></div>
+    <script src="{{ url_for('static', filename='dist/bundle.js') }}"></script>
+  {% endblock %} -->
+
   <form method="post" action="/convert">
     <button method="post" action="/convert" type="submit" value="Convert Units">Convert Units</button>
   </form>
