--- a/templates/track.html
+++ b/templates/track.html
@@ -10,6 +10,9 @@
   <li class="nav-item active">
     <a class="nav-link" href="{{url_for('track')}}">Track Splits</a>
   </li>
+  <li class="nav-item">
+    <a class="nav-link" href="{{url_for('schedule')}}">Schedule</a>
+  </li>
 {% endblock %}
 
 {% block content %}
